# tor-open

./: .gitignore  CMakeLists.txt  README.md  TorManager.desktop  TorManager.pro  client_stats.cpp  client_stats.h  dns_monitor.cpp  dns_monitor.h  fix_compile.py  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mtproxymanager.cpp  mtproxymanager.h  tgbot_manager.cpp  tgbot_manager.h
